fixing a bunch of scroll and spacing issues

--- a/renderer/App/App.css
+++ b/renderer/App/App.css
@@ -1,8 +1,12 @@
+.wrapper {
+  height: var(--app-height);
+  overflow: auto;
+}
+
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - var(--frame-height) - var(--tabs-height, '0px'));
-  padding-bottom: var(--queue-height);
+  min-height: var(--app-height);
 }
