--- a/renderer/base.css
+++ b/renderer/base.css
@@ -7,7 +7,10 @@
   --frame-height: 30px;
   --frame-border: 1px;
   --frame-border-radius: 8px;
-  --tab-height: 2rem;
+  --tabs-height: 48px;
+  --queue-height: 2rem;
+  --app-height: calc(100vh - var(--frame-height) - var(--tabs-height, '0px') - var(--queue-height));
+
   --font-size: 16px;
 
   /* MUI theme variables */
@@ -27,7 +30,7 @@ html, body {
   color: var(--color-text);
   font-size: var(--font-size);
   font-family: var(--font-family);
-  min-height: 100%;
+  height: 100vh;
 }
 
 #app {
@@ -36,6 +39,7 @@ html, body {
   transform: translateZ(0);
   border-radius: var(--frame-border-radius);
   overflow: hidden;
+  height: 100vh;
 
   /* background-color: transparent; */
   background-color: var(--color-background);
